<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MDPAndroid</string>
    <string name="action_settings">Settings</string>

    <string name="action_bluetooth">Bluetooth</string>
    <string name="dialog_message">Bluetooth</string>
    <string name="dialog_title">Bluetooth is not supported by your device</string>
    <string name="ok">Okay</string>

<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> origin/master


>>>>>>> dd471872ddd3820d0b438dfe09bca1cf31bec0ab
    <string name="hello_world">Hello world!</string>

    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>

    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>

    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>

    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>

    <string name="text_pair">Pair</string>
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="start_GRID">GRID</string>
    <string name="start_STATUS">Status</string>
    <string name="robot_status">status</string>
    <string name="map_status">grid</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
<<<<<<< HEAD

<<<<<<< HEAD
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="start_GRID">GRID</string>
    <string name="start_STATUS">Status</string>
    <string name="robot_status">status</string>
    <string name="map_status">grid</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="secure_connect">Connection Establish</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

    <string name="button_send">Send</string>

    <!-- Arrow keys-->
    <string name="arrow_up">Forward></string>
    <string name="arrow_right">RightY</string>
    <string name="arrow_left">Left^</string>
    <string name="arrow_reverse">Reverse</string>


    <!-- Arrow keys-->


    <string-array name="items">
        <item>Set Coordinates</item>
        <item>set F1 and F2</item>

    </string-array>

=======
    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
>>>>>>> dd471872ddd3820d0b438dfe09bca1cf31bec0ab
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="set">set</string>
<<<<<<< HEAD

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

=======
>>>>>>> dd471872ddd3820d0b438dfe09bca1cf31bec0ab
=======

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="set">set</string>
>>>>>>> origin/master

</resources>
